--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="com.example.merna.ntlpopularmoviesapp.view.main.MainFragment"
     android:id="@+id/frameContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
