--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -16,6 +16,9 @@
                 <item
                     android:id="@+id/sort_by_top_rated"
                     android:title="top rated" />
+                <item
+                    android:id="@+id/fav_movies"
+                    android:title="favorites" />
             </group>
         </menu>
     </item>
