--- a/app/src/main/res/layout/cell_trailer.xml
+++ b/app/src/main/res/layout/cell_trailer.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/trailer_layout"
     android:layout_width="200dp"
     android:layout_height="150dp"
@@ -14,6 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/video_play" />
+        app:srcCompat="@drawable/video_play" />
 </RelativeLayout>
 
