--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".view.main.MainFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/movies_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
