--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -49,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:contentDescription="fav. button"
-                    android:src="@drawable/unfav" />
+                    app:srcCompat="@drawable/unfav" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -59,14 +60,14 @@
             android:layout_height="wrap_content"
             tools:text="description" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movieDetails_trailer_recyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:visibility="gone" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movieDetails_reviews_recyclerView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -74,5 +75,5 @@
             android:visibility="gone" />
     </LinearLayout>
 
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
 
