--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
-                    android:contentDescription="fav. button"
+                    android:contentDescription="@string/fav_button"
                     app:srcCompat="@drawable/unfav" />
             </LinearLayout>
         </RelativeLayout>
